he is the person in charge of the merges. To identify the developer responsible
for a given patch, see the "new patches" section of each log.

____________________________________________________________________
** CHANGES ALONG ref@bsc--2007/siesta-bsc--master--2.1
--------------------------------------------------------------------

2007-05-11 15:00:00 GMT	Alberto Garcia <albertog@icmab.es>	patch-32

Summary: Fix typo in state_init.F

A loose 'endif' in state_init.F has been removed.

Update of CHANGES for patch-31.

2007-05-10 11:00:00 GMT Alberto Garcia <albertog@icmab.es>      patch-31

Summary: Avoid shrinking of density-matrix arrays for extrapol.

Routine extrapol has to deal with density-matrices with possibly different
sparsity patterns. It is essential that their "value" and "list" arrays be
large enough to allow proper processing.

After the cleanup, the allocation section after the call to hsparse in
state_init called re_alloc inconditionally, regardless of whether the
total size of Dscf (nh) had increased or not. Sometimes this led to a
*shrinkingg* ofthe arrays, and bounds errors in extrapol. The option
'shrink=.false.' has now been used. (Also, for good measure, shrinking
is avoided in the allocation of listh, now done inside hsparse.)

Extrapol has been turned into a module, and the assumed-shape idiom used
to declare the relevant arrays (otherwise bounds errors would result from
the comparison with the nominal nmax).

* Other: cosmetic change in the 'dep' target to deal properly with
degenerate vpaths.


2007-05-08 21:00:00 GMT	Alberto Garcia <albertog@icmab.es>	patch-30

Summary: Explicit array extents in initatom.f

More fixes for compiler handling of array arguments:

The actual argument (in call to atom in initatom.f):

	nzeta(0:,1,is)

is wrong. It should be:   nzeta(0:,1:,is)

The 0: form was put in a previous patch to avoid an mismatched interface
error with the Marenostrum compiler. But once this is done, apparently